<resources>
    <string name="app_name">TSG</string>
    <string name="title_activity_home_page">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More Options</string>
    <string name="tasmania_shopping_guide">Tasmania Shopping Guide</string>
    <string name="please_choose_your_language_preference">Please Choose your language preference</string>
    <string name="start">Start</string>
    <string name="about_lcl_tech">About LCL Tech</string>
    <string name="ProductInformationPage">ProductInformationPage</string>
    <string name="ProductDetails">Product Details</string>
    <string name="ImageDescription">This is the product image</string>
    <string name="ProductName">Product Name: </string>
    <string name="productABV">Alcohol by volume: </string>
    <string name="ProductYear">Year of release: </string>
    <string name="productPrice">Product Price: </string>
    <string name="productType">Product Type: </string>
    <string name="TasteNose">Taste notes - Nose: </string>
    <string name="TastePalate">Taste notes - Palate: </string>
    <string name="TasteFinish">Taste notes - Finish: </string>
    <string name="Back">Back to previous page</string>
    <string name="Backtohome">Back To Homepage</string>
    <string name="Search">Search Product</string>
    <string name="Favourite">Favourite</string>
    <string name="History">History</string>
    <string name="Notification">Notification</string>
    <string name="Admin">Admin Login</string>
    <string name="About">About</string>
    <string name="Test">Test</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>

    <string-array name="language_array">
        <item>English</item>
        <item>Chinese Simplified</item>
    </string-array>

    <string name="title_activity_tsg_home_page">tsgHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">tsgdevelop@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="DataNotFound">Product Not Found</string>
    <string name="ScanOtherProduct">Scan Other Product</string>
    <string name="PleaseScanProductBarcode">Please Scan Product Barcode</string>
    <string name="ChangeLanguage">Change Language</string>

    <string name="Volume">Volume (ml): </string>
    <string name="Login">Login</string>
    <string name="LoginToYourAccount">Login To Your Account</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Logout">Logout</string>
    <string name="OtherDetails">Other Details</string>
    <string name="Flavour">Flavour</string>

    <string name="SamplePrice">299.99</string>
    <string name="SampleProductName">Chinotto Cask II Cask Strength</string>
    <string name="SampleTasteNose">Buttry crepes suzette, accompanied by intense smoky marmalade and grape fruit that dominate the moment</string>
    <string name="SampleTastePalate">Buttry crepes suzette, accompanied by intense smoky marmalade and grape fruit that dominate the moment</string>
    <string name="SampleTasteFinish">Buttry crepes suzette, accompanied by intense smoky marmalade and grape fruit that dominate the moment</string>
    <string name="SampleProductType">Single Malt</string>
    <string name="SampleProductVolume">500ml</string>
    <string name="SampleABV">65.80%</string>
    <string name="SampleProductYear">2022</string>
    <string name="dollarIcon">$</string>

    <string name="send">send</string>
    <string name="EnterTitle">Enter Title</string>
    <string name="EnterMessage">Enter Message</string>
    <string name="NotificationSystem">Notification System</string>
    <string name="Title">Title</string>
    <string name="notificationTime">This is notification Time</string>
    <string name="PushNotification">Push Notification</string>

    <string name="AddProduct">Add Product</string>
    <string name="DeleteProduct">Delete Product</string>
    <string name="UpdateProduct">Update Product</string>
    <string name="Hello">Hello</string>
    <string name="UpdateProductDetails">Update Product Details</string>
    <string name="BarcodeNumber">Barcode Number: </string>
    <string name="Language">Language</string>
    <string name="SingleCastNumber">Single Cast Number: </string>
    <string name="AgeStatement">Age Statement: </string>
    <string name="PleaseSelectTheDatabase">Please select the database</string>
    <string name="Version">Version 1.0</string>
    <string name="LCLTech">This application develop by LCL Tech</string>
    <string name="barcodeScanner">This application use barcode scanner API from</string>
    <string name="barcodeScannerWebsite">https://github.com/yuriy-budiyev/code-scanner</string>


</resources>