<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"/>

        <item android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search"
            android:title="@string/Search"/>

        <item android:id="@+id/navigation_favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/Favourite"/>

        <item android:id="@+id/navigation_history"
            android:icon="@drawable/ic_history"
            android:title="@string/History"/>

        <item android:id="@+id/navigation_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/Notification"/>

        <item android:id="@+id/navigation_admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/Admin"/>

        <item android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/action_settings"/>

        <item android:id="@+id/navigation_about"
            android:icon="@drawable/ic_about"
            android:title="@string/About"/>

        <item android:id="@+id/navigation_test"
            android:icon="@drawable/ic_test"
            android:title="@string/Test"/>





    </group>

</menu>